# icebug-format

./: .pre-commit-config.yaml  GENERATING_GRAPHS.md  README.md  convert_csr.py  gen.py  pyproject.toml
.github/workflows/: ci.yml
doc/: spec.md
examples/karate/duckdb/: karate_random.duckdb  schema.cypher
examples/karate/duckdb/icebug-disk/: karate_csr.duckdb  nodes_nodes.parquet
examples/karate/icebug-disk/: indices_edges.parquet  indptr_edges.parquet  schema.cypher
generate/: gen.py  snap_binary.py
icebug_format/: __init__.py  cli.py  graphar.py  memory.py  test_csr_duckdb.py
karate/: karate_csr.duckdb
karate/karate_csr/: karate_nodes.parquet
tests/: test_cli.py  test_memory.py
