[project]
name = "graph-std"
version = "0.1.0"
description = "Tools to export graphs from NetworkX to various standard graph formats including CSV, DuckDB, SNAP, LadybugDB and CSR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "real_ladybug>=0.14.1",
    "networkx>=3.5",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
]

[tool.isort]
profile = "black"
